[gd_scene load_steps=6 format=3 uid="uid://cgqmtv6k8swh0"]

[ext_resource type="Script" path="res://main.gd" id="1_xqwck"]
[ext_resource type="PackedScene" uid="uid://wxcasnbpknym" path="res://online.tscn" id="2_hpw6c"]
[ext_resource type="PackedScene" uid="uid://ciysbwy5hom4g" path="res://Conectando.tscn" id="3_ni1ge"]
[ext_resource type="PackedScene" uid="uid://capv1tkqxflob" path="res://Login.tscn" id="4_7fxds"]
[ext_resource type="PackedScene" uid="uid://755crq4hxdue" path="res://interface_registro.tscn" id="5_esyvg"]

[node name="Main" type="Node"]
script = ExtResource("1_xqwck")

[node name="Online" parent="." instance=ExtResource("2_hpw6c")]

[node name="InterfaceRegistro" parent="." instance=ExtResource("5_esyvg")]
visible = false

[node name="Conectando" parent="." instance=ExtResource("3_ni1ge")]
visible = false

[node name="Login" parent="." instance=ExtResource("4_7fxds")]
visible = false

[connection signal="coneccion_exitosa" from="Online" to="." method="_on_online_coneccion_exitosa"]
[connection signal="mensaje_recibido" from="Online" to="." method="_on_online_mensaje_recibido"]
[connection signal="back_button_pressed" from="InterfaceRegistro" to="." method="_on_interface_registro_back_button_pressed"]
[connection signal="datos_registro_establecidos" from="InterfaceRegistro" to="." method="_on_interface_registro_datos_registro_establecidos"]
[connection signal="boton_registrar_presionado" from="Login" to="." method="_on_login_boton_registrar_presionado"]
[connection signal="credenciales_establecidas" from="Login" to="." method="_on_login_credenciales_establecidas"]
